# daps_project1_2023

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  fft_parallel.cpp  fft_sequential.c  fft_sequential.cpp  main.c  main.cpp
res/: output.txt
